Perf: More bulk actions for rankings